# SolanaAnchorRustPhantomGifPortal

./: .gitignore  Anchor.toml  README.md
app/: README.md  package.json
app/src/: App.css  App.js
app/src/assets/: keypair.json
app/src/idl/: idl.json
app/src/scripts/: createKeyPair.js
programs/solana-anchor-gif-portal/: Cargo.toml
programs/solana-anchor-gif-portal/src/: lib.rs
tests/: solana-anchor-gif-portal.js
